changed repo and enabled key forwarding

--- a/deploy/env_vars/base.yml
+++ b/deploy/env_vars/base.yml
@@ -1,6 +1,6 @@
 ---
 
-git_repo: https://github.com/jcalazan/glucose-tracker.git
+git_repo: git@github.com:fourofour/wittl.git
 
 project_name: wittl
 application_name: wittl
