Changed vagrant box

--- a/deploy/roles/base/tasks/main.yml
+++ b/deploy/roles/base/tasks/main.yml
@@ -11,6 +11,7 @@
 - name: Install base packages
   apt: name={{ item }} update_cache={{ update_apt_cache }} force=yes state=installed
   with_items:
+    - language-pack-en
     - build-essential
     - htop
     - git
