--- a/deploy/roles/base/tasks/main.yml
+++ b/deploy/roles/base/tasks/main.yml
@@ -1,5 +1,11 @@
 ---
 
+- name: Update existing packages
+  apt: upgrade=dist update_cache={{ update_apt_cache }}
+
+- name: Autoremove unused packages
+  command: apt-get -y autoremove
+
 - name: Ensure OpenSSl and libssl are the latest versions
   apt: name={{ item }} update_cache={{ update_apt_cache }} state=latest
   with_items:
