--- a/deploy/roles/web/tasks/setup_nginx.yml
+++ b/deploy/roles/web/tasks/setup_nginx.yml
@@ -4,7 +4,13 @@
   apt: name=nginx update_cache={{ update_apt_cache }} state=installed
   tags: packages
 
-- name: Create the Nginx configuration file
+- name: Create nginx configuration file
+  template: src=nginx_config.j2
+            dest=/etc/nginx/nginx.conf
+            backup=yes
+  notify: reload nginx
+
+- name: Create the site Nginx configuration file
   template: src=nginx_site_config.j2
             dest=/etc/nginx/sites-available/{{ application_name }}
             backup=yes
