--- a/deploy/roles/celery/tasks/main.yml
+++ b/deploy/roles/celery/tasks/main.yml
@@ -1,6 +1,12 @@
 ---
+
+- name: Celery | Create celery log directory
+  file: path=/var/log/celery state=directory owner=wittl group=webapps
+
+- name: Celery | Create celery pid directory
+  file: path=/var/run/celery state=directory owner=wittl group=webapps
+
 - name: Celery | Install CeleryBeat upstart jobs
-  when: message_queue is defined
   template: >
     src=upstart.celerybeat.conf.j2
     dest=/etc/init/{{project_name}}-celerybeat.conf
@@ -10,7 +16,6 @@
     - celery
 
 - name: Celery | Install Celery Worker upstart jobs
-  when: message_queue is defined
   template: >
     src=upstart.celeryworker.conf.j2
     dest=/etc/init/{{project_name}}-celeryworker.conf
